# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [6.2.2] - 2026-02-09

### Changed

- O modal para editar a troca de um pedido de troca na feira agora mostra o preço base de sua escolha. 

### Fixed

- Corrigido erro de escrita no botão de excluir dos pedidos de troca.

## [6.2.1] - 2026-02-09

### Added

- Adicionado uma daily para criar um pedido de troca na `/fazendinha feira trocas`.

### Changed

- As entregas não especificam mais a qualidade da planta. Realizar uma entrega usando apenas um tipo de qualidade pode retornar bônus de estrelinhas, se for qualidade Normal ou Premium.
- Aumentada a chance de poder escolher fertilizantes como prêmio de dailies.

## [6.2.0] - 2026-02-07

### Hotfix

- Corrigido problema para criar um pedido de troca na feira de Erva Mate.
- Corrigido cálculo de estatísticas da fazendinha ao colher mais de um campo ao mesmo tempo.
- Corrigido as entregas da fazendinha incluirem apenas erva, milho e arroz.

### Added

- Adicionado qualidade para plantações: Plantas Precárias, Plantas e Plantas Premium. Plantas premium e precárias tem uma mudança em seu preço de 30%.
- Adicionado categorias para as plantações de fazendinha: Grão, Raiz, Vegetal, Fruta, Fruta Nobre e Especial.
- Criado o comando `/fazendinha administrar`, que integra gerenciar campos, silo e feira.
- Criado o comando `/fazendinha feira administrar`, que é um atalho para administrar a feira, disponível no `/fazendinha administrar`.
- Criado o comando `/fazendinha feira trocas`: faça troca de plantas na feira por estrelinhas e/ou fertilizantes. 
- Agora é possível atualizar o valor de um item anunciado na feira no `/fazendinha administrar` - Sugerido por @start_0
- Adicionado uma nova daily para colher plantas de uma qualidade específica.