@@ -1125,6 +1125,7 @@
         "no-user-orders": "This user does not have any trade requests at the moment.",
         "no-public-orders": "No one in the vicinity of the neighborhood is requesting trades at the moment.",
         "complete-order": "Accept trade",
+        "claim-order": "Claim plant",
         "trade-request": "Create trade request",
         "edit-request": "Edit request",
         "delete-order": "Delete request",
@@ -1287,6 +1288,7 @@
         "title": "Manage fields",
         "select-item": "Choose an item to use on fields",
         "footer": "Managing field {{field}}",
+        "help-item-text": "-# Questions about fertilizers? Click:",
         "footer-all": "Managing all fields",
         "no-upgrades": "No upgrades applied at the moment.",
         "upgrade": "{{emoji}} {{upgrade}}\n{{expireLabel}} <t:{{unix}}:R>",
