@@ -1131,6 +1131,7 @@
         "no-public-orders": "Ninguém da vizinhança está precisando de plantas no momento.",
         "complete-order": "Aceitar troca",
         "delete-order": "Excluir pedido",
+        "claim-order": "Resgatar planta",
         "base-price": "Para referência, {{plant}} custa em média {{price}} {{emoji}}",
         "no-order": "Nenhum pedido ainda",
         "order-name": "{{plantEmoji}} {{weight}} Kg {{plantName}} {{qualityEmoji}}",
@@ -1294,6 +1295,7 @@
         "no-upgrades": "Nenhuma melhoria aplicada no momento.",
         "upgrade": "{{emoji}} {{upgrade}}\n{{expireLabel}} <t:{{unix}}:R>",
         "expires": "Expira",
+        "help-item-text": "-# Dúvida sobre fertilizantes? Clique:",
         "expired": "Expirou",
         "help-item-title": "Como conseguir itens?",
         "help-item": "Atualmente só é possível conseguir items para os campos votando na Menhera. A cada voto existe **40%** de chance de ganhar um item. Em finais de semana, a chance dobra para **80%**",
