@@ -151,6 +151,7 @@ const feirinhaOrderSchema = new Schema({
   weight: { type: Number },
   awards: { type: Object },
   createdAt: { type: Number, default: Date.now },
+  completed: { type: Boolean },
 });
 
 const notificationSchema = new Schema({
